[metadata]
name = ffdropenc
version = 2.0.0
author = Seth Parker
author_email = csparker247@gmail.com
description = Batch video converter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/csparker247/ffdropenc
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    PySide6
python_requires = >=3.10

[options.packages.find]
include = ffdropenc*
exclude = test

[options.entry_points]
console_scripts =
    ffdropenc = ffdropenc.main:main
